// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FilterButtons /> hides Filter when showFilter=false 1`] = `
<View
  style={
    {
      "flexDirection": "row",
      "gap": 5,
    }
  }
>
  <View
    accessibilityLabel="Sort results"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#F9F9F9",
        "borderColor": "#E0E0E0",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "opacity": 1,
        "paddingHorizontal": 8,
        "paddingVertical": 5,
      }
    }
  >
    <Text
      style={
        {
          "color": "#1C1B1F",
          "fontSize": 13,
          "fontWeight": "500",
          "marginLeft": 2,
        }
      }
    >
      Sort
    </Text>
  </View>
</View>
`;

exports[`<FilterButtons /> hides Sort when showSort=false 1`] = `
<View
  style={
    {
      "flexDirection": "row",
      "gap": 5,
    }
  }
>
  <View
    accessibilityLabel="Filter results"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#F9F9F9",
        "borderColor": "#E0E0E0",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "opacity": 1,
        "paddingHorizontal": 8,
        "paddingVertical": 5,
      }
    }
  >
    <Text
      style={
        {
          "color": "#1C1B1F",
          "fontSize": 13,
          "fontWeight": "500",
          "marginLeft": 2,
        }
      }
    >
      Filter
    </Text>
  </View>
</View>
`;
